--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_ru.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_ru.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI1b Отчество</div>
+            <div>PI1b. Отчество</div>
             <div>
                 <input type="text" id="pi1b" name="pi1b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -208,7 +208,7 @@
             <div class="col-span-1">PI5. Этническая принадлежность (национальность) ребенка</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
-                    <input id="pi5-1" type="radio" value="1" name="pi2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <input id="pi5-1" type="radio" value="1" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="pi5-1" class="ms-2 text-sm text-gray-900">1. Узбек/чка</label>
                 </div>
                 <div class="flex items-center">
@@ -250,29 +250,51 @@
             </div>
         </div>
 
+        <p class="mt-6"><br>Последнее заведение где находился молодой человек до выхода из системы опеки, согласно соответствующему Реестру</b></p>
+
+        <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div>PI6r. Область</div>
+            <div>
+                <select id="pi6reg" name="pi6reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div>PI6d. Район</div>
+            <div>
+                <select id="pi6dis" name="pi6dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
+            </div>
+        </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6. Уникальный код учреждения, где находился молодой человек до выхода из системы опеки, согласно соответствующему Реестру.</div>
+            <div>PI6. учреждение</div>
             <div class="flex gap-4">
                 <select id="pi6" name="pi6" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6a. Наименование вида опеки</div>
+            <div>PI6a. Уникальный код учреждения</div>
             <div>
                 <input type="text" id="pi6a" name="pi6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6b. Местоположение опеки</div>
+            <div>PI6b. Название учреждения</div>
             <div>
                 <input type="text" id="pi6b" name="pi6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6C. Тип учреждения</div>
+            <div>PI6c. Тип учреждения</div>
             <div>
                 <select id="pi6c" name="pi6c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected>------</option>
@@ -344,7 +366,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div class="ml-4">(Автоматически извлекается из CM11b)</div>
+            <div class="ml-4">д. Район:</div>
             <div>
                 <select id="pi9d" name="pi9d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -851,7 +873,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">0. Нет. Получал ли человек за последние 12 месяцев какую-либо поддержку в поиске или сохранении работы?</div>
+            <div class="col-span-1">EE9. Получал ли человек за последние 12 месяцев какую-либо поддержку в поиске или сохранении работы?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="ee9-1" type="radio" value="1" name="ee9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -895,7 +917,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                EE11. Каковы были источники дохода молодого человека в прошлом месяце (ДЛЯ ОРИЕНТИРА УКАЗАТЬ ТЕКУЩИЙ МЕСЯЦ)?                <small class="block italic mt-1">ВОЗМОЖНО НЕСКОЛЬКО ОТВЕТОВ</small>
+                EE11. Каковы были источники дохода молодого человека в прошлом месяце (ОТЧЕТНЫЙ МЕСЯЦ: АПРЕЛЬ 2024 ГОДА.)?                <small class="block italic mt-1">ВОЗМОЖНО НЕСКОЛЬКО ОТВЕТОВ</small>
             </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
@@ -1124,7 +1146,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">HE8 Введите номер свидетельства о рождении/удостоверения личности/номер паспорта человека. Если у человека его нет, введите 0 (ноль).</div>
+            <div class="col-span-1">HE8 Был ли у человека в течение предыдущих 12 месяцев период, когда он/она не имел доступа к назначенным ему лекарствам?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="he8-1" type="radio" value="1" name="he8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
