--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI1b Otasining ismi</div>
+            <div>PI1b. Otasining ismi</div>
             <div>
                 <input type="text" id="pi1b" name="pi1b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>PI4d. Settlement</div>
+            <div>PI4d. Aholi punkti</div>
             <div>
                 <select id="pi4d" name="pi4d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -197,7 +197,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI4e. Type of settlement</div>
+            <div>PI4e. Aholi punkti turi</div>
             <div class="flex gap-4">
                 <input type="text" id="pi4e" name="pi4e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -208,7 +208,7 @@
             <div class="col-span-1">PI5. Yosh odamning etnik kelib chiqishi (millati)</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
-                    <input id="pi5-1" type="radio" value="1" name="pi2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <input id="pi5-1" type="radio" value="1" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="pi5-1" class="ms-2 text-sm text-gray-900">1. Oʻzbek</label>
                 </div>
                 <div class="flex items-center">
@@ -250,29 +250,51 @@
             </div>
         </div>
 
+        <p class="mt-6"><br>Tegishli reyestrga koʻra, bolalarga vasiylik turining tizimidan chiqishdan oldin yosh odam yashagan oxirgi muassasining</b></p>
+
+        <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div>PI6r. Viloyat</div>
+            <div>
+                <select id="pi6reg" name="pi6reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div>PI6d. Tuman</div>
+            <div>
+                <select id="pi6dis" name="pi6dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
+            </div>
+        </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6. Tegishli reyestrga koʻra, bolalarga vasiylik turining tizimidan chiqishdan oldin yosh odam yashagan oxirgi muassasining noyob kodi</div>
+            <div>PI6. Muassasa</div>
             <div class="flex gap-4">
                 <select id="pi6" name="pi6" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
         </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6a. Vasiylik turini nomi</div>
+            <div>PI6a. Muassasa kodi</div>
             <div>
                 <input type="text" id="pi6a" name="pi6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
+
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6b. Vasiylik manzili</div>
+            <div>PI6b. Muassasa nomi</div>
             <div>
                 <input type="text" id="pi6b" name="pi6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>PI6C. Muassasa turi</div>
+            <div>PI6c. Muassasa turi</div>
             <div>
                 <select id="pi6c" name="pi6c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected>------</option>
@@ -344,7 +366,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div class="ml-4">(Avtomatik ravishda CM11b dan olinadi)</div>
+            <div class="ml-4">д. Tuman:</div>
             <div>
                 <select id="pi9d" name="pi9d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -352,7 +374,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div class="ml-4">h. Settlement</div>
+            <div class="ml-4">h. Aholi punkti</div>
             <div>
                 <select id="pi9h" name="pi9h" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -361,7 +383,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="ml-4">i. Type of settlement</div>
+            <div class="ml-4">i. Aholi punkti turi</div>
             <div class="flex gap-4">
                 <input type="text" id="pi9i" name="pi9i" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -851,7 +873,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">0. Yo&#39;q. So&#39;nggi 12 oy ichida odam ish topish yoki ishini saqlab qolish uchun biron bir yordam oldimi?</div>
+            <div class="col-span-1">EE9. So&#39;nggi 12 oy ichida odam ish topish yoki ishini saqlab qolish uchun biron bir yordam oldimi?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="ee9-1" type="radio" value="1" name="ee9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -895,7 +917,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                EE11. O&#39;tgan oyda yosh odamning daromad manbalari qanday edi (ANIQLASHTIRISH UCHUN DASTLABKI OY KO&#39;RSATILSIN)?                <small class="block italic mt-1">BIR NECHTA JAVOBLAR MUMKIN</small>
+                EE11. O&#39;tgan oyda yosh odamning daromad manbalari qanday edi (MA&#39;LUMOT OY: 2024-YIL APREL)?                <small class="block italic mt-1">BIR NECHTA JAVOBLAR MUMKIN</small>
             </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
@@ -1124,7 +1146,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">НЕ 8 Shaxsning tugʻilganlik toʻgʻrisidagi guvohnoma/shaxsini tasdiqlovchi hujjat/pasport raqamini kiriting. Agar odamda yoʻq boʻlsa, 0 (nol) ni kiriting.</div>
+            <div class="col-span-1">НЕ 8 Oldingi 12 oy ichida yosh odam o&#39;ziga buyurilgan dori-darmonlarini olish imkoniga ega bo&#39;lmagan vaqt bo&#39;lganmi?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="he8-1" type="radio" value="1" name="he8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
