--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_ru.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_ru.html
@@ -1146,7 +1146,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">HE8 Был ли у человека в течение предыдущих 12 месяцев период, когда он/она не имел доступа к назначенным ему лекарствам?</div>
+            <div class="col-span-1">HE8. Был ли у человека в течение предыдущих 12 месяцев период, когда он/она не имел доступа к назначенным ему лекарствам?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="he8-1" type="radio" value="1" name="he8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
