--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
@@ -1146,7 +1146,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="col-span-1">НЕ 8 Oldingi 12 oy ichida yosh odam o&#39;ziga buyurilgan dori-darmonlarini olish imkoniga ega bo&#39;lmagan vaqt bo&#39;lganmi?</div>
+            <div class="col-span-1">НЕ 8. Oldingi 12 oy ichida yosh odam o&#39;ziga buyurilgan dori-darmonlarini olish imkoniga ega bo&#39;lmagan vaqt bo&#39;lganmi?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="he8-1" type="radio" value="1" name="he8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
