--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
@@ -126,17 +126,18 @@
                 <select id="i9" name="i9" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected>Quyidagi kodlardan birini tanlang</option>
                     <optgroup label="Bolalar muassasasi:">
-                        <option value="11">11 Bolalar uyi (Bolalar uyi)</option>
-                        <option value="12">12 Mehribonlik uyi</option>
-                        <option value="13">13 &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun  internat uyi</option>
+                        <option value="11">11. Bolalar uyi (Bolalar uyi)</option>
+                        <option value="12">12. Mehribonlik uyi</option>
+                        <option value="13">13. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun  internat uyi</option>
+                        <option value="14">14. SOS bolalar shaharchasi</option>
                     </optgroup>
                     <optgroup label="Maktab-internatlar:">
-                        <option value="21">21 Kar yoki eshitish qobiliyati zaif bolalar uchun I-II toifa</option>
-                        <option value="22">22 Ko&#39;zi ojiz yoki zaif ko&#39;ruvchi bolalar uchun III-IV toifa</option>
-                        <option value="23">23 Og&#39;ir nutq nuqsonlari bo&#39;lgan bolalar uchun V toifa</option>
-                        <option value="24">24 Tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun VI toifa</option>
-                        <option value="25">25 Aqliy rivojlanishi sust/ruhiy buzuqliklari bo&#39;lgan bolalar uchun VII toifa</option>
-                        <option value="26">26 Aqli zaif bolalar uchun VIII toifa</option>
+                        <option value="21">21. Kar yoki eshitish qobiliyati zaif bolalar uchun I-II toifa</option>
+                        <option value="22">22. Ko&#39;zi ojiz yoki zaif ko&#39;ruvchi bolalar uchun III-IV toifa</option>
+                        <option value="23">23. Og&#39;ir nutq nuqsonlari bo&#39;lgan bolalar uchun V toifa</option>
+                        <option value="24">24. Tayanch-harakat apparati nuqsonlari bo&#39;lgan bolalar uchun VI toifa</option>
+                        <option value="25">25. Aqliy rivojlanishi sust/ruhiy buzuqliklari bo&#39;lgan bolalar uchun VII toifa</option>
+                        <option value="26">26. Aqli zaif bolalar uchun VIII toifa</option>
                     </optgroup>
                 </select>
             </div>
@@ -457,7 +458,7 @@
         <table class="w-full" aria-describedby="Transfers from other institutions">
             <thead>
                 <tr class="border-b pb-1 mb-1">
-                    <th class="p-2">HA bo&#39;lsa,</th>
+                    <th class="p-2"></th>
                     <th class="p-2">O&#39;g&#39;il bolalar</th>
                     <th class="p-2">Qizlar</th>
                     <th class="p-2">Jami</th>
@@ -465,7 +466,9 @@
             </thead>
             <tbody>
                 <tr class="border-b">
-                    <td class="p-2">NEX1A. 0-2 yoshdagi bolalarning chiqishlari</td>
+                    <td class="p-2">
+                        <small class="italic block mb-2">HA bo&#39;lsa,</small>
+                        NEX1A. 0-2 yoshdagi bolalarning chiqishlari                    </td>
                     <td class="p-2 text-center">
                         <input type="text" id="nex1a_b" name="nex1a_b" class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
