--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_en.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_en.html
@@ -126,17 +126,18 @@
                 <select id="i9" name="i9" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected>Please select one of the following codes</option>
                     <optgroup label="Childcare institutions:">
-                        <option value="11">11 Children&#39;s home (Baby home)</option>
-                        <option value="12">12 Mehribonlik house</option>
-                        <option value="13">13 Muruvvat house for children with disabilities</option>
+                        <option value="11">11. Children&#39;s home (Baby home)</option>
+                        <option value="12">12. Mehribonlik house</option>
+                        <option value="13">13. Muruvvat house for children with disabilities</option>
+                        <option value="14">14. SOS Children&#39;s Village</option>
                     </optgroup>
                     <optgroup label="Boarding schools:">
-                        <option value="21">21 Type I-II for deaf or with hearing impairments children</option>
-                        <option value="22">22 Type III-IV for blind or visually impaired children</option>
-                        <option value="23">23 Type V for children with severe speech impairments</option>
-                        <option value="24">24 Type VI for children with musculoskeletal disorders</option>
-                        <option value="25">25 Type VII for children with children with slow mental development/mental disorders</option>
-                        <option value="26">26 Type VIII for children with intellectual disabilities</option>
+                        <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
+                        <option value="22">22. Type III-IV for blind or visually impaired children</option>
+                        <option value="23">23. Type V for children with severe speech impairments</option>
+                        <option value="24">24. Type VI for children with musculoskeletal disorders</option>
+                        <option value="25">25. Type VII for children with children with slow mental development/mental disorders</option>
+                        <option value="26">26. Type VIII for children with intellectual disabilities</option>
                     </optgroup>
                 </select>
             </div>
@@ -457,7 +458,7 @@
         <table class="w-full" aria-describedby="Transfers from other institutions">
             <thead>
                 <tr class="border-b pb-1 mb-1">
-                    <th class="p-2">If YES,</th>
+                    <th class="p-2"></th>
                     <th class="p-2">Boys</th>
                     <th class="p-2">Girls</th>
                     <th class="p-2">Total</th>
@@ -465,7 +466,9 @@
             </thead>
             <tbody>
                 <tr class="border-b">
-                    <td class="p-2">NEX1A. Exits of children 0-2 years</td>
+                    <td class="p-2">
+                        <small class="italic block mb-2">If YES,</small>
+                        NEX1A. Exits of children 0-2 years                    </td>
                     <td class="p-2 text-center">
                         <input type="text" id="nex1a_b" name="nex1a_b" class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
