--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_ru.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_ru.html
@@ -126,17 +126,18 @@
                 <select id="i9" name="i9" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected>Пожалуйста, выберите один из следующих кодов</option>
                     <optgroup label="Детские учреждения:">
-                        <option value="11">11 Детский дом (Дом ребенка)</option>
-                        <option value="12">12 Дом «Мехрибонлик»</option>
-                        <option value="13">13 Дом-интернат «Мурувват» для детей с инвалидностью</option>
+                        <option value="11">11. Детский дом (Дом ребенка)</option>
+                        <option value="12">12. Дом «Мехрибонлик»</option>
+                        <option value="13">13. Дом-интернат «Мурувват» для детей с инвалидностью</option>
+                        <option value="14">14. SOS Детская деревня</option>
                     </optgroup>
                     <optgroup label="Школы-интернаты:">
-                        <option value="21">21 Тип I-II для глухих или слабослышащих детей</option>
-                        <option value="22">22 Тип III-IV для слепых или слабовидящих детей</option>
-                        <option value="23">23 V тип для детей с тяжелыми нарушениями речи</option>
-                        <option value="24">24 VI тип для детей с нарушениями опорно-двигательного аппарата</option>
-                        <option value="25">25 Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями</option>
-                        <option value="26">26 Тип VIII для детей с ограниченными интеллектуальными возможностями</option>
+                        <option value="21">21. Тип I-II для глухих или слабослышащих детей</option>
+                        <option value="22">22. Тип III-IV для слепых или слабовидящих детей</option>
+                        <option value="23">23. V тип для детей с тяжелыми нарушениями речи</option>
+                        <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата</option>
+                        <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями</option>
+                        <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями</option>
                     </optgroup>
                 </select>
             </div>
@@ -457,7 +458,7 @@
         <table class="w-full" aria-describedby="Transfers from other institutions">
             <thead>
                 <tr class="border-b pb-1 mb-1">
-                    <th class="p-2">Если ДА,</th>
+                    <th class="p-2"></th>
                     <th class="p-2">Мальчики</th>
                     <th class="p-2">Девочки</th>
                     <th class="p-2">Всего</th>
@@ -465,7 +466,9 @@
             </thead>
             <tbody>
                 <tr class="border-b">
-                    <td class="p-2">NEX1A. Выходы детей 0-2 лет</td>
+                    <td class="p-2">
+                        <small class="italic block mb-2">Если ДА,</small>
+                        NEX1A. Выходы детей 0-2 лет                    </td>
                     <td class="p-2 text-center">
                         <input type="text" id="nex1a_b" name="nex1a_b" class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
