--- a/src/templates/7_UZ_ChildDI_Family_Type_Homes_ru.html
+++ b/src/templates/7_UZ_ChildDI_Family_Type_Homes_ru.html
@@ -117,7 +117,16 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>IFP1d. Type of settlement</div>
             <div>
-                <input type="text" id="ifp1d" name="ifp1d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="ifp1d" name="ifp1d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose"></option>
+                    <option value="10" class="t_settlement_type_10"></option>
+                    <option value="20" class="t_settlement_type_20"></option>
+                    <option value="21" class="t_settlement_type_21"></option>
+                    <option value="22" class="t_settlement_type_22"></option>
+                    <option value="23" class="t_settlement_type_23"></option>
+                    <option value="24" class="t_settlement_type_24"></option>
+                    <option value="31" class="t_settlement_type_31"></option>
+                </select>
             </div>
         </div>
 
@@ -129,7 +138,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP2а. Сколько лет опыта работы приемными родителями::</div>
+            <div>IFP2а. Сколько лет опыта работы приемными родителями:</div>
             <div>
                 <input type="text" id="ifp2ay" name="ifp2ay" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -137,7 +146,7 @@
         <input type="hidden" id="ifp2am" name="ifp2am" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IFP3. Право собственности на жилое помещение::</div>
+            <div>IFP3. Право собственности на жилое помещение:</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ifp3-1" type="radio" value="1" name="ifp3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -335,7 +344,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFT4_AGE. Возраст приемной матери в годах (на дату заполнения анкеты)</div>
+            <div>IFT4_AGE. Возраст приемной отцы в годах (на дату заполнения анкеты)</div>
             <div>
                 <input type="text" id="ift4_age" name="ift4_age" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -940,7 +949,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">Ребенок №1</td>
+                    <td class="p-2">Ребенок №2</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -986,7 +995,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">Ребенок №1</td>
+                    <td class="p-2">Ребенок №3</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1032,7 +1041,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">Ребенок №1</td>
+                    <td class="p-2">Ребенок №4</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1078,7 +1087,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">Ребенок №1</td>
+                    <td class="p-2">Ребенок №5</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1174,20 +1183,22 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>QS3a. Имя, отчество и фамилия специалиста</div>
+            <div>
+                QS3a. Имя, отчество и фамилия специалиста                <small class="block mt-2">Пожалуйста, обратите внимание на ясность</small>
+            </div>
             <div>
                 <input type="text" id="qs3a" name="qs3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>Пожалуйста, обратите внимание на ясность. QS4</div>
-            <div>
+            <div>QS4. Сколько раз за последние 12 месяцев к приемным родителям приходил специалист, назначенный для мониторинга данного дома семейного типа, или иное лицо из отдела защиты детей?</div>
+            <div class="flex items-center gap-4">
                 <input type="text" id="qs4" name="qs4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
+                Посещения            </div>
         </div>
 
-        <p class="mt-6">QS5. Приемные родители когда-либо::</p>
+        <p class="mt-6">QS5. Приемные родители когда-либо:</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div class="ml-4">а. ...отказывались заботиться о ребенке?</div>
@@ -1203,7 +1214,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-4">б. ... отказывались от ухода за детьми с инвалидностью (имеющими подтвержденную инвалидность), ВИЧ-инфицированными или больными СПИДом</div>
+            <div class="ml-4">б. ... отказывались от ухода за детьми с инвалидностью (имеющими подтвержденную инвалидность), ВИЧ-инфицированными или больными СПИДом?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="qs5b-1" type="radio" value="1" name="qs5b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1216,7 +1227,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-4">в. ... отказывались от ухода за детьми-подростками (10+ лет) с нарушениями поведения</div>
+            <div class="ml-4">в. ... отказывались от ухода за детьми-подростками (10+ лет) с нарушениями поведения?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="qs5c-1" type="radio" value="1" name="qs5c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
