--- a/src/templates/7_UZ_ChildDI_Family_Type_Homes_uz.html
+++ b/src/templates/7_UZ_ChildDI_Family_Type_Homes_uz.html
@@ -117,7 +117,16 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>IFP1d. Type of settlement</div>
             <div>
-                <input type="text" id="ifp1d" name="ifp1d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="ifp1d" name="ifp1d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose"></option>
+                    <option value="10" class="t_settlement_type_10"></option>
+                    <option value="20" class="t_settlement_type_20"></option>
+                    <option value="21" class="t_settlement_type_21"></option>
+                    <option value="22" class="t_settlement_type_22"></option>
+                    <option value="23" class="t_settlement_type_23"></option>
+                    <option value="24" class="t_settlement_type_24"></option>
+                    <option value="31" class="t_settlement_type_31"></option>
+                </select>
             </div>
         </div>
 
@@ -129,7 +138,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP2a. Tutingan ota-ona sifatida necha yillik tajribaga ega::</div>
+            <div>IFP2a. Tutingan ota-ona sifatida necha yillik tajribaga ega:</div>
             <div>
                 <input type="text" id="ifp2ay" name="ifp2ay" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -137,7 +146,7 @@
         <input type="hidden" id="ifp2am" name="ifp2am" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IFP3. Turar-joyga egalik huquqi::</div>
+            <div>IFP3. Turar-joyga egalik huquqi:</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ifp3-1" type="radio" value="1" name="ifp3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -335,7 +344,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFT4_AGE. Tutingan onaning yoshi (anketa to&#39;ldirilgan sanada)</div>
+            <div>IFT4_AGE. Tutingan otalar yoshi (anketa to&#39;ldirilgan sanada)</div>
             <div>
                 <input type="text" id="ift4_age" name="ift4_age" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -940,7 +949,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">1-chi bola</td>
+                    <td class="p-2">2-chi bola</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -986,7 +995,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">1-chi bola</td>
+                    <td class="p-2">3-chi bola</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1032,7 +1041,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">1-chi bola</td>
+                    <td class="p-2">4-chi bola</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1078,7 +1087,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="p-2">1-chi bola</td>
+                    <td class="p-2">5-chi bola</td>
                     <td class="p-2">
                         <div class="flex items-center justify-center gap-2">
                             <div class="flex items-center">
@@ -1174,20 +1183,22 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>QS3a. Mutaxassisning ismi, otasining ismi va familiyasi</div>
+            <div>
+                QS3a. Mutaxassisning ismi, otasining ismi va familiyasi                <small class="block mt-2">Iltimos, aniqlik kiriting</small>
+            </div>
             <div>
                 <input type="text" id="qs3a" name="qs3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>Iltimos, aniqlik kiriting. QS4</div>
-            <div>
+            <div>QS4. O&#39;tgan 12 oy ichida ushbu oilaviy bolalar uyni nazorat qilish uchun tayinlangan mutaxassis yoki bolalarni himoya qilish bo&#39;limining boshqa xodimi tutingan ota-onalarga necha marta tashrif buyurgan?</div>
+            <div class="flex items-center gap-4">
                 <input type="text" id="qs4" name="qs4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
+                Tashriflar            </div>
         </div>
 
-        <p class="mt-6">QS5. Tutinganota-onalar qachondir::</p>
+        <p class="mt-6">QS5. Tutinganota-onalar qachondir:</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div class="ml-4">a. ... bolaga g&#39;amxo&#39;rlik qilishdan bosh tortganmi?</div>
@@ -1216,7 +1227,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div class="ml-4">c. ... xulq-atvori buzilgan o&#39;smir bolalarga (10+ yosh) g&#39;amxo&#39;rlik qilishdan bosh tortganmi</div>
+            <div class="ml-4">c. ... xulq-atvori buzilgan o&#39;smir bolalarga (10+ yosh) g&#39;amxo&#39;rlik qilishdan bosh tortganmi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="qs5c-1" type="radio" value="1" name="qs5c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
