--- a/src/templates/8_UZ_ChildDI_Patronat_Family_en.html
+++ b/src/templates/8_UZ_ChildDI_Patronat_Family_en.html
@@ -28,7 +28,7 @@
         <p class="mb-2">Please base your answers only on the documents and data available in the official file of the patronat family. If the file does not contain information for a specific question, please mark the &quot;Unspecified/Unknown&quot; option. Please refrain from using any other sources of information besides the official file.</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-12">
-            <div>REG. RegionG</div>
+            <div>REG. Region</div>
             <div>
                 <input type="text" id="reg" name="reg" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -149,25 +149,25 @@
 
         <p class="font-bold mt-6">1.1. Information about the guardian</p>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG1 Name</div>
+            <div>IG1. Name</div>
             <div>
                 <input type="text" id="ig1" name="ig1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG2 Patronymics</div>
+            <div>IG2. Patronymics</div>
             <div>
                 <input type="text" id="ig2" name="ig2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG3 Surname</div>
+            <div>IG3. Surname</div>
             <div>
                 <input type="text" id="ig3" name="ig3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG4 Gender</div>
+            <div>IG4. Gender</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig4-1" type="radio" value="1" name="ig4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -180,20 +180,20 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5 Date of birth (day/month/year)</div>
+            <div>IG5. Date of birth (day/month/year)</div>
             <div>
                 <input type="text" id="ig5" name="ig5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5_AGE Age (in years, at the date of the completion of the questionnaire)</div>
+            <div>IG5_AGE. Age (in years, at the date of the completion of the questionnaire)</div>
             <div>
                 <input type="text" id="ig5_age" name="ig5_age" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG6 Current marital status</div>
+            <div>IG6. Current marital status</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig6-1" type="radio" value="1" name="ig6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -223,7 +223,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG7 Level of education</div>
+            <div>IG7. Level of education</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig7-1" type="radio" value="0" name="ig7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -261,7 +261,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG8 Current occupational status</div>
+            <div>IG8. Current occupational status</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig8-1" type="radio" value="1" name="ig8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -336,26 +336,26 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4a How many biological children do the guardian have, if any?</div>
+            <div>IFP4a. How many biological children do the guardian have, if any?</div>
             <div>
                 <input type="text" id="pf4a" name="pf4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4b How many adopted children do the guardian have, if any?</div>
+            <div>IFP4b. How many adopted children do the guardian have, if any?</div>
             <div>
                 <input type="text" id="pf4b" name="pf4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP5 How many of these children live in the household?</div>
+            <div>IFP5. How many of these children live in the household?</div>
             <div>
                 <input type="text" id="pf5" name="pf5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Children placed in the patronat family</h2>
-        <p class="mt-6">FC4 For each child currently placed into care in this patronat family, please record the following information</p>
+        <p class="mt-6">FC4. For each child currently placed into care in this patronat family, please record the following information</p>
         <table class="w-full mt-6" aria-label="For each child currently placed into care in this family-type home, please record the following information">
             <thead>
                 <tr class="border-b">
@@ -662,7 +662,7 @@
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">4. EXITS FROM THIS PATRONAT FAMILY DURING THE REPORTING YEAR</h2>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>EX1 During the reporting year, did any child leave this patronat family?</div>
+            <div>EX1. During the reporting year, did any child leave this patronat family?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="ex1-1" type="radio" value="1" name="ex1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -687,10 +687,10 @@
             <thead>
                 <tr class="border-b">
                     <th class="p-2"></th>
-                    <th class="w-40 p-2">a. Gender.</th>
-                    <th class="p-2">b. Age.</th>
+                    <th class="w-40 p-2">a. Gender</th>
+                    <th class="p-2">b. Age</th>
                     <th class="w-52 p-2">c. Has a disability?</th>
-                    <th class="p-2">d. Reason for leaving.</th>
+                    <th class="p-2">d. Reason for leaving</th>
                 </tr>
             </thead>
             <tbody>
@@ -945,7 +945,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>
-                QS1a. The name, patronymics, and surname of the specialist                <small class="text-sm italic">Please note in the clear</small>
+                QS1a. The name, patronymics, and surname of the specialist.                <small class="text-sm italic block mt-2">Please note in the clear</small>
             </div>
             <div>
                 <input type="text" id="qs1a" name="qs1a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
