--- a/src/templates/8_UZ_ChildDI_Patronat_Family_ru.html
+++ b/src/templates/8_UZ_ChildDI_Patronat_Family_ru.html
@@ -28,7 +28,7 @@
         <p class="mb-2">Просим основывать свои ответы только на документах и данных, имеющихся в официальном деле патронатной семьи. Если дело не содержит информации по конкретному вопросу, отметьте вариант «Не указано/Неизвестно». Пожалуйста, воздержитесь от использования любых других источников информации, кроме официального дела.</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-12">
-            <div>REG. ОбластьG</div>
+            <div>REG. Область</div>
             <div>
                 <input type="text" id="reg" name="reg" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -149,25 +149,25 @@
 
         <p class="font-bold mt-6">1.1. Информация об опекуне</p>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG1 Имя</div>
+            <div>IG1. Имя</div>
             <div>
                 <input type="text" id="ig1" name="ig1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG2 Отчество</div>
+            <div>IG2. Отчество</div>
             <div>
                 <input type="text" id="ig2" name="ig2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG3 Фамилия</div>
+            <div>IG3. Фамилия</div>
             <div>
                 <input type="text" id="ig3" name="ig3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG4 Пол</div>
+            <div>IG4. Пол</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig4-1" type="radio" value="1" name="ig4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -180,20 +180,20 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5 Дата рождения (день/месяц/год)</div>
+            <div>IG5. Дата рождения (день/месяц/год)</div>
             <div>
                 <input type="text" id="ig5" name="ig5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5_AGE Возраст (в годах, на дату заполнения анкеты)</div>
+            <div>IG5_AGE. Возраст (в годах, на дату заполнения анкеты)</div>
             <div>
                 <input type="text" id="ig5_age" name="ig5_age" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG6 Текущее семейное положение</div>
+            <div>IG6. Текущее семейное положение</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig6-1" type="radio" value="1" name="ig6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -223,7 +223,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG7 Уровень образования</div>
+            <div>IG7. Уровень образования</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig7-1" type="radio" value="0" name="ig7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -261,7 +261,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG8 Текущая трудовая занятость  </div>
+            <div>IG8. Текущая трудовая занятость  </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig8-1" type="radio" value="1" name="ig8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -336,26 +336,26 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4a Сколько биологических детей у приемного родителя, если таковые имеются?</div>
+            <div>IFP4a. Сколько биологических детей у приемного родителя, если таковые имеются?</div>
             <div>
                 <input type="text" id="pf4a" name="pf4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4b Сколько усыновленных детей у приемного родителя, если таковые имеются?</div>
+            <div>IFP4b. Сколько усыновленных детей у приемного родителя, если таковые имеются?</div>
             <div>
                 <input type="text" id="pf4b" name="pf4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP5 Сколько из этих детей проживает в домохозяйстве?</div>
+            <div>IFP5. Сколько из этих детей проживает в домохозяйстве?</div>
             <div>
                 <input type="text" id="pf5" name="pf5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Дети, помещенные в патронатную семью</h2>
-        <p class="mt-6">FC4 Для каждого ребенка, находящегося в настоящее время под опекой данной патронатной семьи, запишите следующую информацию</p>
+        <p class="mt-6">FC4. Для каждого ребенка, находящегося в настоящее время под опекой данной патронатной семьи, запишите следующую информацию</p>
         <table class="w-full mt-6" aria-label="For each child currently placed into care in this family-type home, please record the following information">
             <thead>
                 <tr class="border-b">
@@ -662,7 +662,7 @@
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">4. ВЫХОДЫ ИЗ ЭТОЙ ПАТРОНАТНОЙ СЕМЬИ В ТЕЧЕНИЕ ОТЧЕТНОГО ГОДА</h2>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>EX1 В течение отчетного года кто-нибудь из детей покинет эту патронатную семью?</div>
+            <div>EX1. В течение отчетного года кто-нибудь из детей покинет эту патронатную семью?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="ex1-1" type="radio" value="1" name="ex1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -687,10 +687,10 @@
             <thead>
                 <tr class="border-b">
                     <th class="p-2"></th>
-                    <th class="w-40 p-2">а. Пол.</th>
-                    <th class="p-2">б. Возраст.</th>
-                    <th class="w-52 p-2">в. Имеется ли инвалидность?.?</th>
-                    <th class="p-2">д. Причина ухода.</th>
+                    <th class="w-40 p-2">а. Пол</th>
+                    <th class="p-2">б. Возраст</th>
+                    <th class="w-52 p-2">в. Имеется ли инвалидность?</th>
+                    <th class="p-2">д. Причина ухода</th>
                 </tr>
             </thead>
             <tbody>
@@ -945,7 +945,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>
-                QS1a. Имя, отчество и фамилия специалиста                <small class="text-sm italic">Пожалуйста, обратите внимание на ясность</small>
+                QS1a. Имя, отчество и фамилия специалиста.                <small class="text-sm italic block mt-2">Пожалуйста, обратите внимание на ясность</small>
             </div>
             <div>
                 <input type="text" id="qs1a" name="qs1a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
