--- a/src/templates/8_UZ_ChildDI_Patronat_Family_uz.html
+++ b/src/templates/8_UZ_ChildDI_Patronat_Family_uz.html
@@ -28,7 +28,7 @@
         <p class="mb-2">Iltimos, javoblaringizni faqat patronat oilaning rasmiy hujjatlari jildida mavjud bo&#39;lgan hujjatlar va ma&#39;lumotlarga asoslang. Agar unda biror savolga tegishli ma&#39;lumot bo&#39;lmasa, &quot;Aniqlanmagan/Noma&#39;lum&quot; deb  belgilang. Rasmiy jilddan boshqa maʼlumot manbalaridan foydalanmang.</p>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-12">
-            <div>REG. ViloyatG</div>
+            <div>REG. Viloyat</div>
             <div>
                 <input type="text" id="reg" name="reg" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -149,25 +149,25 @@
 
         <p class="font-bold mt-6">1.1. Vasiy haqida ma&#39;lumot</p>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG1 Ismi</div>
+            <div>IG1. Ismi</div>
             <div>
                 <input type="text" id="ig1" name="ig1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG2 Otasining ismi</div>
+            <div>IG2. Otasining ismi</div>
             <div>
                 <input type="text" id="ig2" name="ig2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG3 Familiyasi</div>
+            <div>IG3. Familiyasi</div>
             <div>
                 <input type="text" id="ig3" name="ig3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG4 Jinsi</div>
+            <div>IG4. Jinsi</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig4-1" type="radio" value="1" name="ig4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -180,20 +180,20 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5 Tug&#39;ilgan sanasi (kun/oy/yil)</div>
+            <div>IG5. Tug&#39;ilgan sanasi (kun/oy/yil)</div>
             <div>
                 <input type="text" id="ig5" name="ig5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IG5_AGE Yoshi (yillarda, so&#39;rovnoma to&#39;ldirilgan sanada)</div>
+            <div>IG5_AGE. Yoshi (yillarda, so&#39;rovnoma to&#39;ldirilgan sanada)</div>
             <div>
                 <input type="text" id="ig5_age" name="ig5_age" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG6 Joriyi oilaviy holati</div>
+            <div>IG6. Joriyi oilaviy holati</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig6-1" type="radio" value="1" name="ig6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -223,7 +223,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG7 Ma&#39;lumoti</div>
+            <div>IG7. Ma&#39;lumoti</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig7-1" type="radio" value="0" name="ig7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -261,7 +261,7 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>IG8 Joriy mehnat bandligi holati</div>
+            <div>IG8. Joriy mehnat bandligi holati</div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="ig8-1" type="radio" value="1" name="ig8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -336,26 +336,26 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4a Patronatga bola qabul qiluvchining biologik (o&#39;z) bolasi bormi, agar bo&#39;lsa nechta?</div>
+            <div>IFP4a. Patronatga bola qabul qiluvchining biologik (o&#39;z) bolasi bormi, agar bo&#39;lsa nechta?</div>
             <div>
                 <input type="text" id="pf4a" name="pf4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP4b Patronatga bola qabul qiluvchining farzandlikka olingan bolasi bormi, bo&#39;lsa nechta?</div>
+            <div>IFP4b. Patronatga bola qabul qiluvchining farzandlikka olingan bolasi bormi, bo&#39;lsa nechta?</div>
             <div>
                 <input type="text" id="pf4b" name="pf4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>IFP5 Bu bolalarning nechtasi xonadonda yashaydi?</div>
+            <div>IFP5. Bu bolalarning nechtasi xonadonda yashaydi?</div>
             <div>
                 <input type="text" id="pf5" name="pf5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. Patronat oilaga joylashtirilgan bolalar</h2>
-        <p class="mt-6">FC4 Hozirda ushbu patronat oila qaramog&#39;ida bo&#39;lgan har bir bola uchun quyidagi ma&#39;lumotlarni yozib oling</p>
+        <p class="mt-6">FC4. Hozirda ushbu patronat oila qaramog&#39;ida bo&#39;lgan har bir bola uchun quyidagi ma&#39;lumotlarni yozib oling</p>
         <table class="w-full mt-6" aria-label="For each child currently placed into care in this family-type home, please record the following information">
             <thead>
                 <tr class="border-b">
@@ -662,7 +662,7 @@
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">4. HISOBOY YILDA BU PATRONAT OILASIDAN CHIQISHLAR</h2>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
-            <div>EX1 Hisobot yil davomida bolalardan birontasibu patronat oilani tark etadimi?</div>
+            <div>EX1. Hisobot yil davomida bolalardan birontasibu patronat oilani tark etadimi?</div>
             <div class="col-span-1 flex items-center gap-4">
                 <div class="flex items-center">
                     <input id="ex1-1" type="radio" value="1" name="ex1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -687,10 +687,10 @@
             <thead>
                 <tr class="border-b">
                     <th class="p-2"></th>
-                    <th class="w-40 p-2">a. Jinsi.</th>
-                    <th class="p-2">b. Yoshi.</th>
-                    <th class="w-52 p-2">c. Nogironligi bormi?.?</th>
-                    <th class="p-2">d. Ketish sababi.</th>
+                    <th class="w-40 p-2">a. Jinsi</th>
+                    <th class="p-2">b. Yoshi</th>
+                    <th class="w-52 p-2">c. Nogironligi bormi?</th>
+                    <th class="p-2">d. Ketish sababi</th>
                 </tr>
             </thead>
             <tbody>
@@ -945,7 +945,7 @@
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>
-                QS1a. Mutaxassisning ismi, otasining ismi va familiyasi                <small class="text-sm italic">Iltimos, aniqlik kiriting</small>
+                QS1a. Mutaxassisning ismi, otasining ismi va familiyasi.                <small class="text-sm italic block mt-2">Iltimos, aniqlik kiriting</small>
             </div>
             <div>
                 <input type="text" id="qs1a" name="qs1a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
