update instrument 2 - repozitionare todif7_other

--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_uz.html
@@ -4435,10 +4435,10 @@
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div class="ml-4">
-                7. Boshqalar: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammo bor edi. Iltimos, aniqlik kiriting: …            </div>
-            <div>
-                <input type="text" id="todif7_other" name="todif7_other" class="mb-4 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            <div class="ml-4 flex flex-col gap-4">
+                7. Boshqalar: Bolada yuqorida sanab o&#39;tilmagan boshqa sohalarda muammo bor edi. Iltimos, aniqlik kiriting: …                <input type="text" id="todif7_other" name="todif7_other" class="mb-4 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            </div>
+            <div>                
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="todif7-1" type="radio" value="1" name="todif7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
