traduceri type of settlement

--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_en.html
@@ -1045,7 +1045,7 @@
         </div>
 
 
-        <p class="mt-6">b. Legal domicile - City/Village:</p>
+        <p class="mt-6">b. Legal domicile:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>c. Region:</div>
@@ -1524,7 +1524,7 @@
         </div>
 
 
-        <p class="mt-6">b. Legal domicile - City/Village:</p>
+        <p class="mt-6">b. Legal domicile:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>c. Region:</div>
@@ -2017,7 +2017,7 @@
         </div>
 
 
-        <p class="mt-6">b. Legal domicile - City/Village:</p>
+        <p class="mt-6">b. Legal domicile:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>c. Region:</div>
