--- a/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_ru.html
+++ b/src/templates/2_UZ_ChildDI_Children_in_boarding_schools_ru.html
@@ -1045,7 +1045,7 @@
         </div>
 
 
-        <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+        <p class="mt-6">б. Регистрация по месту жительства:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>в. Область:</div>
@@ -1524,7 +1524,7 @@
         </div>
 
 
-        <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+        <p class="mt-6">б. Регистрация по месту жительства:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>в. Область:</div>
@@ -2017,7 +2017,7 @@
         </div>
 
 
-        <p class="mt-6">б. Регистрация по месту жительства - Город/Деревня:</p>
+        <p class="mt-6">б. Регистрация по месту жительства:</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>в. Область:</div>
