--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_en.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_en.html
@@ -255,7 +255,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>PI6r. Region</div>
             <div>
-                <select id="pi6reg" name="pi6reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="pi6r" name="pi6r" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -264,7 +264,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>PI6d. District</div>
             <div>
-                <select id="pi6dis" name="pi6dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="pi6d" name="pi6d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -355,7 +355,7 @@
             </div>
         </div>
 
-        <p>b. Legal domicile - City/Village:</p>
+        <p>b. Legal domicile:</p>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div class="ml-4">c. Region:</div>
             <div>
