--- a/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
+++ b/src/templates/5_UZ_ChildDI_Youth_Leaving_Care_uz.html
@@ -255,7 +255,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>PI6r. Viloyat</div>
             <div>
-                <select id="pi6reg" name="pi6reg" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="pi6r" name="pi6r" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -264,7 +264,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>PI6d. Tuman</div>
             <div>
-                <select id="pi6dis" name="pi6dis" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="pi6d" name="pi6d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
